--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <button class="btn" onclick="reset()">重新开始</button>
   </p>
   <p style="font-size: 12px;">
-    tombus不愧是你套娃生成器<br/>
+    <a href="https://space.bilibili.com/14282758" target="_blank">tombus</a>不愧是你套娃生成器<br/>
     仅供娱乐，绝无恶意<br/>
-    by.<a href="https://www.bunnyxt.com" target="_blant">bunnyxt</a>, 2020-03-23, <a href="https://www.github.com/bunnyxt/bksn-tombus" target="_blant">source code</a>
+    by.<a href="https://www.bunnyxt.com" target="_blank">bunnyxt</a>, 2020-03-23, <a href="https://www.github.com/bunnyxt/bksn-tombus" target="_blank">source code</a>
   </p>
 </div>
 </body>
